# enterprise-kb-agent

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  package-lock.json
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  agent-pipeline.html  agent-pipeline.zh-CN.html  architecture-overview.html  architecture-overview.zh-CN.html  llm-config.zh-CN.md  release.md  retrieval-pipeline.html  retrieval-pipeline.zh-CN.html
frontend/: Dockerfile  README.md  README.zh-CN.md  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/api/: client.ts
frontend/src/components/: AnnouncementBell.tsx  AppSidebar.tsx  AvatarCropDialog.tsx  ConfirmDialog.tsx  DateTimePicker.tsx  ProfileDialog.tsx  ProtectedRoute.tsx
frontend/src/components/knowledge/: DocumentStatus.tsx  DocumentTable.tsx  UploadDialog.tsx
frontend/src/components/ui/: button.tsx  dialog.tsx  sidebar.tsx  table.tsx
frontend/src/hooks/: useAuth.tsx  useTheme.tsx
frontend/src/layouts/: AdminLayout.tsx
frontend/src/pages/: ChatPage.tsx  KnowledgePage.tsx  LoginPage.tsx
frontend/src/pages/admin/: AnnouncementPage.tsx  DepartmentPage.tsx  HomePage.tsx  (+5 more)
frontend/src/types/: chat.ts  index.ts  knowledge.ts
server/: .env.example  README.md  requirements.txt
server/backend/: Dockerfile  docker-entrypoint.sh  main.py  pyproject.toml  worker.py
server/scripts/: add_content_tsv.sql  create_tables.py  migrate_001_content_tsv.py  reset-env.sh  seed_os.py  setup_dev.sh
(+7 files in other folders)
