[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-kb-backend"
version = "0.1.0"
description = "Enterprise KB - Backend Entry"
requires-python = ">=3.11"
dependencies = [
    "kb-core",
    "kb-biz",
    "kb-adapter-postgres",
]

[tool.setuptools.packages.find]
where = ["."]
